# Icarus_Prime

./: .gitignore  Dockerfile  LICENSE  README.md
.github/workflows/: build_firmware.yml
ci/: build.sh
icarus_prime/: .gitignore  .mxproject  CMakeLists.txt  icarus_prime.ioc  icarus_prime_toolchain-arm-none-eabi.cmake  toolchain-arm-none-eabi.cmake
icarus_prime/Core/Inc/: main.h
icarus_prime/Core/Src/: main.c  syscalls.c
